fix alignment on photo taking page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -51,3 +51,15 @@ $path: "/public/images/";
 .file-upload input{
   display: none;
 }
+
+#upload-section{
+  .heading-medium{
+    margin-top: 0;
+  }
+  .heading-small{
+    margin-top: 2.5em;
+  }
+  .button{
+    margin: 2em 0;
+  }
+}
